k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: famstory-svc
spec:
  selector:
    app: famstory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3030
