k8s/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: famstory-deploy
  labels:
    app: famstory
spec:
  replicas: 2
  selector:
    matchLabels:
      app: famstory
  template:
    metadata:
      labels:
        app: famstory
    spec:
      containers:
        - name: famstory
          image: synoti21/famstory-backend:latest
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512Mi"
              cpu: "0.3"
---
apiVersion: v1
kind: Service
metadata:
  name: famstory-svc
spec:
  selector:
    app: famstory
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: famstory-route
  namespace: famstory
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`famstory.thisiswandol.com`)
      kind: Rule
      services:
        - name: famstory-svc
          port: 3000
  tls:
    certResolver: myresolver
